--- a/src/styles/variables/_spacing.scss
+++ b/src/styles/variables/_spacing.scss
@@ -22,8 +22,8 @@ $space-56: $space-unit * 56;
 $space-64: $space-unit * 64;
 
 // Container widths
-$container-sm: 540px;
-$container-md: 720px;
-$container-lg: 960px;
-$container-xl: 1140px;
-$container-xxl: 1320px; 
+$container-sm: 33.75rem;   // 540px
+$container-md: 45rem;      // 720px
+$container-lg: 60rem;      // 960px
+$container-xl: 71.25rem;   // 1140px
+$container-xxl: 82.5rem;   // 1320px 
