--- a/src/components/Loader/Loader.module.scss
+++ b/src/components/Loader/Loader.module.scss
@@ -9,11 +9,18 @@
   width: 100%;
 }
 
+.loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1.5rem;
+}
+
 .spinner {
-  width: 48px;
-  height: 48px;
-  border: 5px solid #f3f3f3;
-  border-top: 5px solid #3498db;
+  width: 3rem;
+  height: 3rem;
+  border: 0.3125rem solid #f3f3f3;
+  border-top: 0.3125rem solid #3498db;
   border-radius: 50%;
   animation: spin 1s linear infinite;
 }
