--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,7 +27,7 @@
 .card {
   background-color: white;
   border-radius: 0.5rem;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0.25rem 0.375rem rgba(0, 0, 0, 0.1);
   padding: $space-4;
   margin-bottom: $space-4;
   
@@ -45,7 +45,7 @@
   
   &__footer {
     padding-top: $space-4;
-    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-top: 0.0625rem solid rgba(0, 0, 0, 0.1);
   }
 }
 
@@ -56,7 +56,7 @@
   white-space: nowrap;
   vertical-align: middle;
   user-select: none;
-  border: 1px solid transparent;
+  border: 0.0625rem solid transparent;
   padding: $space-2 $space-4;
   font-size: $font-size-base;
   line-height: 1.5;
