--- a/src/styles/mixins/_scrollbars.scss
+++ b/src/styles/mixins/_scrollbars.scss
@@ -1,17 +1,17 @@
 // Custom scrollbar styling for the space theme
 @mixin custom-scrollbar {
   &::-webkit-scrollbar {
-    width: 8px;
+    width: 0.5rem;
   }
   
   &::-webkit-scrollbar-track {
     background: rgba(255, 255, 255, 0.05);
-    border-radius: 4px;
+    border-radius: 0.25rem;
   }
   
   &::-webkit-scrollbar-thumb {
     background: rgba(67, 97, 238, 0.3);
-    border-radius: 4px;
+    border-radius: 0.25rem;
     
     &:hover {
       background: rgba(67, 97, 238, 0.5);
