--- a/src/styles/variables/_breakpoints.scss
+++ b/src/styles/variables/_breakpoints.scss
@@ -2,11 +2,11 @@
 
 // Breakpoint values
 $breakpoint-xs: 0;
-$breakpoint-sm: 576px;
-$breakpoint-md: 768px;
-$breakpoint-lg: 992px;
-$breakpoint-xl: 1200px;
-$breakpoint-xxl: 1400px;
+$breakpoint-sm: 36rem;    // 576px
+$breakpoint-md: 48rem;    // 768px
+$breakpoint-lg: 62rem;    // 992px
+$breakpoint-xl: 75rem;    // 1200px
+$breakpoint-xxl: 87.5rem; // 1400px
 
 // Breakpoint map
 $breakpoints: (
