--- a/src/layout/Layout.module.scss
+++ b/src/layout/Layout.module.scss
@@ -20,7 +20,7 @@
 // Responsive styles for mobile
 @media (max-width: 48rem) {
   .mainContent {
-    margin-top: 0;
+    margin-top: 3rem;
     min-height: calc(100vh - var(--footer-height));
   }
 } 
