--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -8,7 +8,8 @@
 .modal {
   @include mixins.modal-container;
   padding: 1.5rem;
-  max-width: 90%;
+  max-width: 40rem;
+  width: 100%;
   max-height: 90vh;
   overflow-y: auto;
   position: relative;
