--- a/src/components/UI/Dialog/Dialog.module.scss
+++ b/src/components/UI/Dialog/Dialog.module.scss
@@ -15,14 +15,16 @@
 }
 
 .content {
-  background-color: white;
+  background: rgba(32, 32, 55, 0.95);
   border-radius: 0.5rem;
-  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0.625rem 1.875rem rgba(0, 0, 0, 0.4);
   max-width: 90%;
   max-height: 90%;
   overflow: auto;
   position: relative;
   padding: 1.5rem;
+  border: 0.0625rem solid rgba(255, 255, 255, 0.1);
+  color: var(--text-light);
 }
 
 .closeButton {
@@ -36,11 +38,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #666;
+  color: var(--text-light);
   transition: color 0.2s;
   
   &:hover {
-    color: #000;
+    color: var(--text-white);
   }
   
   &:focus {
